[tool.poetry]
name = "poetry add streamlit"
version = "0.1.0"
description = ""
authors = ["Manhanii <69176038+Manhanii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
