[tool.poetry]
name = "poetry add streamlit"
version = "0.1.0"
description = ""
authors = ["Manhanii <69176038+Manhanii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
bs4 = "^0.0.1"
pandas = "^2.0.2"
requests = "^2.31.0"
numpy = "^1.24.3"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
